upd(ee-video): Fix text overflow and add description outline

--- a/src/styles/components/_ee-video.css
+++ b/src/styles/components/_ee-video.css
@@ -1,3 +1,4 @@
+
 .ee-video_img     { overflow : hidden;         }
 .ee-video_img img { margin   : -9.5% 0 -11% 0; }
 
@@ -5,16 +6,18 @@
   top: 0; left: 0; right: 0; bottom: 0;
   position         : absolute;
   padding          : 7px;
+  font-size        : 1.1rem;
+  background-color : hsla(0, 0%, 0%, 0.85);
+  outline          : 1px dotted transparent;
   opacity          : 0;
   pointer-events   : none;
-  background-color : hsla(0, 0%, 0%, 0.8);
-  font-size        : 1.1rem;
   z-index          : 2;
-  transition       : opacity .5s;
+  transition       : opacity .5s, outline .4s;
 }
 .ee-video_desc.--open {
   opacity: 1;
   pointer-events: all;
+  outline: 1px dotted hsl(197, 11%, 35%);
 }
 
 .ee-video_widget {
@@ -64,6 +67,7 @@
   flex-direction: column;
 }
 .ee-video-desc_text span {
+  overflow-x: hidden;
   overflow-y: auto;
 }
 .ee-video-desc_text h1 {
